Refactor to use Guice, Hazelcast, more abstract implementation