@@ -17,7 +17,7 @@
         <hazelcast.version>5.3.6</hazelcast.version>
         <rxjava.version>3.1.8</rxjava.version>
         <guice.version>5.1.0</guice.version>
-        <main.verticle>com.asyncloadtest.core.websocket.WebSocketVerticle</main.verticle>
+        <main.verticle>com.asyncloadtest.core.Main</main.verticle>
     </properties>
 
     <dependencies>
@@ -149,6 +149,23 @@
             <!-- Package as fat jar -->
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-surefire-plugin</artifactId>
+                <version>3.0.0-M5</version>
+                <configuration>
+                    <argLine>
+                        --add-modules java.se
+                        --add-exports java.base/jdk.internal.ref=ALL-UNNAMED
+                        --add-opens java.base/java.lang=ALL-UNNAMED
+                        --add-opens java.base/java.nio=ALL-UNNAMED
+                        --add-opens java.base/sun.nio.ch=ALL-UNNAMED
+                        --add-opens java.management/sun.management=ALL-UNNAMED
+                        --add-opens jdk.management/com.sun.management.internal=ALL-UNNAMED
+                    </argLine>
+                </configuration>
+            </plugin>
+
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-shade-plugin</artifactId>
                 <version>3.2.4</version>
                 <executions>
@@ -173,5 +190,11 @@
                 </executions>
             </plugin>
         </plugins>
+
+        <resources>
+            <resource>
+                <directory>src/main/resources</directory>
+            </resource>
+        </resources>
     </build>
 </project>
